...
          >
            <Text className="text-sm font-bold text-white">Thử lại</Text>
          </TouchableOpacity>
        </View>
      ) : (
        <FlashList
          testID="customersList"
          data={filteredCustomers}
          keyExtractor={keyExtractor}
          renderItem={renderCustomerCard}
          contentContainerStyle={{ padding: 16, paddingBottom: 100 }}
          showsVerticalScrollIndicator={false}
          refreshControl={
...
